--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/webextension-polyfill": "^0.10.0",
+    "@types/chrome": "^0.0.226",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "@vitejs/plugin-react-swc": "^3.0.1",
